tests/lexer/invalid/test_unterminated_string.src
fn print_msg() {
    string msg = "Hello,
    world";
    return;
}
